hphp/hack/test/typecheck/references/refs_in_array/foreach1.php.exp
File "foreach1.php", line 5, characters 18-20:
Binding a reference in an array is no longer supported in Hack. (Typing[4225])
